--- a/styles/custom.css
+++ b/styles/custom.css
@@ -342,3 +342,8 @@ h1.display-4 {
     font-size: 4.5rem;
   }
 }
+@media only screen and (max-width: 360px) {
+  .wrapper--banner h1.display-1 {
+    font-size: 4rem;
+  }
+}
