--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ p {
 
 .banner--overlay {
     background-image: linear-gradient(to top right, rgba(203, 0, 52, 0.88) , rgba(224, 105, 0, 0.88));
+    padding: 10%;
 }
 
 [class^="wrapper--"] {
